--- a/nvme_rhel_96.adoc
+++ b/nvme_rhel_96.adoc
@@ -31,7 +31,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 ** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces, as it disconnects both root and data filesystems and may lead to system instability.
 
 == Step 1: Optionally, enable SAN booting
-include::_include/nvme/nvme-enable-san-boot.adoc[]
+include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Validate software versions
 Use the following procedure to validate the minimum supported RHEL 9.6 software versions.
@@ -268,6 +268,7 @@ The expected ouptut is 1.
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Step 5: Verify NVMe boot services
+With RHEL 9.6, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. After booting completes, verify that the services are enabled.
 
 include::_include/nvme/verify-nvme-services.adoc[]
 
