--- a/_include/nvme/enable-san-booting.adoc
+++ b/_include/nvme/enable-san-booting.adoc
@@ -7,7 +7,7 @@ Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matri
 
 . https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Create a SAN boot namespace and map it to the host^].
 
-. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
+. Enable SAN booting in the server BIOS for the ports to which the SAN boot namespace is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 
