--- a/_include/windows/windows-multipathing.adoc
+++ b/_include/windows/windows-multipathing.adoc
@@ -1,8 +1,8 @@
 == Step 4: Confirm the multipath configuration for your host
 
-Install Microsoft Multipath I/O (MPIO) software and enable multipathing If your Windows host has more than one path to the storage system.
+Install Microsoft Multipath I/O (MPIO) software and enable multipathing if your Windows host has more than one path to the storage system.
 
-The MPIO software presents a single disk to the Windows OS for all paths, and a device-specific module (DSM) manages path failover. On a Windows system, the two main components in any MPIO solution are the DSM and the Windows MPIO.
+The MPIO software presents a single disk to the Windows OS for all paths, and a device-specific module (DSM) manages path failover. On a Windows system, the two main components in an MPIO solution are the DSM and the Windows MPIO.
 
 CAUTION: If you don't install the MPIO software, the Windows OS might see each path as a separate disk. This can lead to data corruption. 
 
