--- a/_include/windows/windows-san-boot.adoc
+++ b/_include/windows/windows-san-boot.adoc
@@ -1,6 +1,6 @@
 == Step 1: Optionally, enable SAN booting
 
-You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot to simplify deployment and improve scalability.  
+You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot to simplify deployment and improve scalability.. 
 
 [role="tabbed-block"]
 ====
@@ -9,15 +9,11 @@ You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends 
 --
 If you choose to use SAN booting, it must be supported by your configuration.
 
-NOTE: You can use the configuration settings provided in this procedure to configure cloud clients connected to link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] and link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^].
-
 .Before you begin
 Use the https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Windows OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
 
 .Steps
-. Create a SAN boot LUN and map it to the host.
-+
-See link:https://docs.netapp.com/us-en/ontap/san-management/index.html[SAN storage management^].
+. link:https://docs.netapp.com/us-en/ontap/san-management/index.html[Create a SAN boot LUN and map it to the host^].
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped. 
 +
@@ -29,4 +25,5 @@ For information on how to enable the HBA BIOS, see your vendor-specific document
 --
 Perform a local boot by installing the Windows OS on the local hard disk, for example, on an SSD, SATA, or RAID.
 --
+
 ====
