--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -54,7 +54,7 @@ The following table shows the native Linux OS compiled multipath parameter setti
 | path_selector | "service-time 0"
 | polling_interval | 5
 | prio | "ontap"
-| product | LUN.*
+| product | LUN
 | retain_attached_hw_handler | yes
 | rr_weight | "uniform"
 | user_friendly_names | no
