--- a/nvme_sles15_sp7.adoc
+++ b/nvme_sles15_sp7.adoc
@@ -23,13 +23,16 @@ You can use the following support and features with the NVMe-oF host configurati
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
 ** Support for SAN booting using the NVMe/FC protocol.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 9.6.
-** Support for persistent discovery controllers (PDCs) using a unique discovery NQN
-** TLS 1.3 encryption support for NVMe/TCP 
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP and NVMe/FC. You can use secure in-band authentication for NVMe/TCP with SLES15 SP7.
+** Support for persistent discovery controllers (PDCs) using a unique discovery NQN.
+** TLS 1.3 encryption support for NVMe/TCP. 
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+* Features available:
+** There are no new features available.
 * Known limitations
-** NetApp `sanlun` host utility support isn't available for NVMe-oF on a SUSE Linux Enterprise Server 15 SP7 host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+** NetApp `sanlun` host utility support isn't available for NVMe-oF on a SLES15 SP7 host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces, as it disconnects both root and data filesystems and may lead to system instability.  
 
 include::_include/nvme/enable-san-boot.adoc[]
 
@@ -49,7 +52,7 @@ uname -r
 The following example shows a SLES kernel version:
 +
 ----
-6.4.0-150700.48-default
+6.4.0-150700.53.3-default 
 ----
 
 . Install the `nvme-cli` package:
@@ -62,7 +65,7 @@ rpm -qa|grep nvme-cli
 The following example shows an `nvme-cli` package version:
 +
 ----
-nvme-cli-2.11+17.g6e09119-150700.1.1.x86_64
+nvme-cli-2.11+22.gd31b1a01-150700.3.3.2.x86_64 
 ----
 
 . Install the `libnvme` package:
@@ -75,7 +78,7 @@ rpm -qa|grep libnvme
 The following example shows an `libnvme` package version:
 +
 ----
-libnvme1-1.11-150700.2.2.x86_64
+libnvme1-1.11+4.ge68a91ae-150700.4.3.2.x86_64 
 ----
 
 . On the host, check the hostnqn string at `/etc/nvme/hostnqn`:
@@ -1055,7 +1058,7 @@ include::_include/nvme/linux-configure-tls.adoc[]
 +
 [source,cli]
 ----
-`rpm -qa | grep ktls`
+rpm -qa | grep ktls
 ----
 +
 You should see the following output displayed:
@@ -1068,7 +1071,7 @@ ktls-utils-0.10+33.g311d943-150700.1.5.x86_64
 +
 [source,cli]
 ----
-`rpm -qa | grep ssl`
+rpm -qa | grep ssl
 ----
 +
 .Show example output
@@ -1145,7 +1148,7 @@ Aug 21 15:46:54 RX2530-M4-17-153 tlshd[961]: Built from ktls-utils 0.11-dev on M
 + 
 [source,cli]
 ----
-`cat /etc/nvme/hostnqn`
+cat /etc/nvme/hostnqn
 ----
 +
 You should see the following output:
@@ -1158,7 +1161,7 @@ nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0035-5910-804b-b2c04f444d33
 +
 [source,cli]
 ----
-`nvme gen-tls-key --hmac=1 --identity=1 --subsysnqn= nqn.1992-08.com.netapp:sn.a2d41235b78211efb57dd039eab67a95:subsystem.nvme1`
+nvme gen-tls-key --hmac=1 --identity=1 --subsysnqn= nqn.1992-08.com.netapp:sn.a2d41235b78211efb57dd039eab67a95:subsystem.nvme1
 ----
 +
 You should see the following output:
@@ -1213,7 +1216,7 @@ cat /proc/keys | grep NVMe
 +
 [source,cli]
 ----
-`nvme connect -t tcp -w 192.168.111.80 -a 192.168.111.66  -n nqn.1992-08.com.netapp:sn.a2d41235b78211efb57dd039eab67a95:subsystem.nvme1 --tls_key=0x069f56bb –tls`
+nvme connect -t tcp -w 192.168.111.80 -a 192.168.111.66  -n nqn.1992-08.com.netapp:sn.a2d41235b78211efb57dd039eab67a95:subsystem.nvme1 --tls_key=0x069f56bb –tls
 ----
 +
 You should see the following output:
@@ -1226,7 +1229,7 @@ connecting to device: nvme0
 +
 [source,cli]
 ----
-`nvme list-subsys`
+nvme list-subsys
 ----
 +
 .Show example output
@@ -1244,7 +1247,7 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.a2d41235b78211efb57dd039eab67a95:su
 +
 [source,cli]
 ----
-`nvme subsystem controller show -vserver sles15_tls -subsystem sles15 -instance`
+nvme subsystem controller show -vserver sles15_tls -subsystem sles15 -instance
 ----
 +
 .Show example output
