--- a/nvme_rhel_10.adoc
+++ b/nvme_rhel_10.adoc
@@ -28,7 +28,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 * Features available:
 ** Beginning with RHEL 10, native NVMe multipathing is always enabled, and DM multipath support for NVMe-oF is not supported.
 * Known limitations: 
-** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces, as it disconnects both root and data filesystems and might lead to system instability.
+** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
 == Step 1: Optionally, enable SAN booting
 include::_include/nvme/enable-san-booting.adoc[]
