--- a/_include/nvme/secure-inband-authentication-version10-rhel-proxmox.adoc
+++ b/_include/nvme/secure-inband-authentication-version10-rhel-proxmox.adoc
@@ -1,91 +1,4 @@
----
-sidebar: sidebar
-permalink: nvme-rockylinux-10.html
-keywords: nvme, linux, rocky, linux, red hat, enterprise
-summary: How to Configure NVMe-oF Host for Rocky Linux 10 with ONTAP storage
----
-= Configure Rocky Linux 10 for NVMe-oF with ONTAP storage
-:hardbreaks:
-:toclevels: 1
-:nofooter:
-:icons: font
-:linkattrs:
-:imagesdir: ./media/
-
-[.lead]
-include::_include/nvme/nvme-introduction.adoc[]
-
-.About this task 
-You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 10. You should also review the known limitations before starting the configuration process.
-
-* Support available:
-** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices on SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP. You can use secure in-band authentication for NVMe/TCP with Rocky Linux 10.
-
-+
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-* Features available:
-** Beginning with Rocky Linux 10, native NVMe multipathing is always enabled, and DM multipath support for NVMe-oF is not supported.
-* Known limitations: 
-** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
-
-== Step 1: Optionally, enable SAN booting
-
-include::_include/nvme/enable-san-booting.adoc[]
-
-== Step 2: Validate software versions
-
-Use the following procedure to validate the minimum supported Rocky Linux 10 software versions.
-
-.Steps
-
-. Install Rocky Linux 10 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 10 kernel: 
-+
-[source,cli]
-----
-uname -r
-----
-+
-The following example shows a Rocky Linux kernel version:
-+
-----
-6.12.0-55.9.1.el10_0.x86_64
-----
-
-include::_include/nvme/validate-software-version10-rockylinux-proxmox.adoc[]
-
-== Step 3: Configure NVMe/FC
-
-include::_include/nvme/configure-nvmefc-version10-rockylinux-proxmox.adoc[]
-
-== Step 4: Optionally, enable 1MB I/O 
-
-include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
-
-== Step 5: Verify NVMe boot services 
-
-With Rocky Linux 10, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
-
-After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
-
-include::_include/nvme/verify-nvme-services.adoc[]
-
-== Step 6: Configure NVMe/TCP
-
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
-
-include::_include/nvme/configure-nvme-tcp-steps-version10-rockylinux-proxmox.adoc[]
-
-== Step 7: Validate NVMe-oF
-
-include::_include/nvme/nvme-validate-nvme-of.adoc[]
-
-include::_include/nvme/validate-nvme-of-latersteps-version10-rockylinux-proxmox.adoc[]
-
-== Step 8: Set up secure in-band authentication
-
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a Rocky Linux 10 host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10 host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -104,7 +17,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the Rocky Linux 10 host.
+. Generate the dhchap key for the RHEL 10 host.
 +
 The following output describes the `gen-dhchap-key` command paramters:
 +
@@ -186,7 +99,6 @@ DHHC- 1:03:7zf8I9gaRcDWH3tCH5vLGaoyjzPIvwNWusBfKdpJa+hia
 ----
 ====
 --
-
 .JSON file
 --
 When multiple NVMe subsystems are available on the ONTAP controller configuration, you can use the `/etc/nvme/config.json` file with the `nvme connect-all` command. 
@@ -301,11 +213,3 @@ mzEKUbcWu26I33b93bil2WR09XDho/ld3L45J+0FeCsStBEAfhYgkQU=:
 ----
 --
 =====
-
-== Step 9: Review the known issues
-
-There are no known issues.
-
-// 2025 JUN 25, ONTAPDOC-3090
-// ONTAPDOC-2561 25-Nov-2024
-// ONTAPDOC-2987 13-May-2025
